# knives-out

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.pro.example  README.md  compose.env.example  compose.yml  coverage-badge.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_community.yml  feature_request.yml
.github/workflows/: ci.yml  dev-environment-example.yml  main-maintenance.yml  pages.yml  sync-wiki.yml
docs/: architecture.md  ci.md  pro.md  roadmap.md
examples/auth_configs/: client-credentials.yml  user-admin.yml
examples/auth_plugins/: login_bearer.py
examples/auth_profiles/: anonymous-user-admin.yml
examples/custom_packs/: unexpected_header.py
examples/graphql/: library.graphql
examples/openapi/: petstore.yaml  storefront.yaml
examples/shadow_twin/: draft-orders.capture.ndjson
examples/workflow_packs/: listed_pet_lookup.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  apiConfig.test.ts  apiConfig.ts  main.tsx  styles.css  types.ts
scripts/: check_coverage_drop.py  check_markdown_links.py  sync_coverage_badge.py  sync_wiki.py
src/knives_out/: api.py  api_models.py  api_store.py  attack_packs.py  auth_config.py  auth_plugins.py  builtin_auth.py  capture.py  cli.py  example_auth_plugins.py  example_packs.py  example_workflow_packs.py  exporting.py  extensions.py  filtering.py  generator.py  graphql_loader.py  learned_discovery.py  learned_loader.py  models.py  openapi_loader.py  profiles.py  project_snapshots.py  project_store.py  promotion.py  reporting.py  review_bundles.py  runner.py  services.py  spec_loader.py  suppressions.py  verification.py  workflow_packs.py
tests/: test_api.py  test_api_integration.py  test_attack_packs.py  test_auth_config.py  test_auth_plugin_docs.py  test_auth_plugins.py  test_builtin_auth.py  test_cli.py  test_docs.py  test_examples.py  test_exporting.py  test_extension_coverage.py  test_filtering.py  test_generator.py  test_graphql_generator.py  test_graphql_loader.py  test_integration_smoke.py  test_maintenance_scripts.py  test_openapi_loader.py  test_profiles.py  test_project_snapshots.py  test_promotion.py  test_review_bundles.py  test_runner.py  test_shadow_twin.py  test_spec_loader.py  test_suppressions.py  test_sync_wiki.py  test_verification.py  test_web_app.py  test_workflow_packs.py
(+9 files in other folders)
