[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "knives-out"
version = "0.2.0"
description = "Adversarial testing for APIs from OpenAPI and GraphQL schemas."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Keith Wegner" }
]
dependencies = [
  "fastapi>=0.115.0",
  "graphql-core>=3.2.6",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.20",
  "PyYAML>=6.0.2",
  "rich>=13.7.0",
  "typer>=0.12.3",
  "uvicorn>=0.32.0",
  "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
knives-out = "knives_out.cli:main"

[project.entry-points."knives_out.attack_packs"]
unexpected-header = "knives_out.example_packs:attack_pack"

[project.entry-points."knives_out.workflow_packs"]
listed-id-lookup = "knives_out.example_workflow_packs:workflow_pack"

[project.entry-points."knives_out.auth_plugins"]
env-bearer = "knives_out.example_auth_plugins:auth_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/knives_out"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
